<?xml version="1.0" encoding="UTF-8"?>
<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware 
	LLC, and others contributors as indicated by the @authors tag. All rights 
	reserved. See the copyright.txt in the distribution for a full listing of 
	individual contributors. This copyrighted material is made available to anyone 
	wishing to use, modify, copy, or redistribute it subject to the terms and 
	conditions of the GNU Lesser General Public License, v. 2.1. This program 
	is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; 
	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
	PURPOSE. See the GNU Lesser General Public License for more details. You 
	should have received a copy of the GNU Lesser General Public License, v.2.1 
	along with this distribution; if not, write to the Free Software Foundation, 
	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <parent>
    <groupId>org.jboss.narayana.xts</groupId>
    <artifactId>xts-all</artifactId>
    <version>5.11.4.Final-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
 </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>ws-c11</artifactId>
  <packaging>jar</packaging>
  <name>Narayana: XTS WS-C</name>
  <description>Narayana: XTS WS-C (wsc11)</description>
  <build>
    <sourceDirectory>dev/src</sourceDirectory>
    <resources>
      <resource>
        <directory>dev/dd</directory>
      </resource>
      <resource>
        <directory>dev/dd/wscoor1.1/wsdl</directory>
        <targetPath>org/oasis_open/docs/ws_tx/wscoor/_2006/_06/wsdl</targetPath>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <executions>
          <execution>
            <id>ws-c11</id>
            <phase>package</phase>
            <goals>
              <goal>war</goal>
            </goals>
            <configuration>
              <webXml>dev/dd/ws-c11_web-app.xml</webXml>
              <classifier>war</classifier>
              <packagingExcludes>WEB-INF/lib/,WEB-INF/classes/</packagingExcludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>api</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <classifier>api</classifier>
              <includes>
                <include>com/arjuna/wsc/AlreadyRegisteredException.class</include>
              </includes>
            </configuration>
          </execution>
          <execution>
            <id>impl</id>
            <phase>package</phase>
            <configuration>
              <classifier>impl</classifier>
              <forceCreation>true</forceCreation>
              <excludes>
                <exclude>com/arjuna/wsc/AlreadyRegisteredException.class</exclude>
              </excludes>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.jboss.narayana.arjunacore</groupId>
      <artifactId>arjunacore</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.spec.javax.servlet</groupId>
      <artifactId>jboss-servlet-api_3.0_spec</artifactId>
      <version>${version.org.jboss.spec.javax.servlet}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.ws</groupId>
      <artifactId>jbossws-api</artifactId>
      <version>${version.org.jboss.ws}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.logging</groupId>
      <artifactId>jboss-logging</artifactId>
      <version>${version.org.jboss.logging.jboss-logging}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.jboss.logging</groupId>
      <artifactId>jboss-logging-processor</artifactId>
      <version>${version.org.jboss.logging.jboss-logging-processor}</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>j9</id>
      <activation>
        <jdk>[1.9, 11)</jdk>
      </activation>
      <properties>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <executions>
              <execution>
                <id>default-compile</id>
                <configuration>
                  <compilerArgs>
                    <arg>--add-modules</arg>
                    <arg>java.xml,java.xml.bind,java.xml.ws</arg>
                    <arg>--add-opens</arg>
                    <arg>java.base/java.util=ALL-UNNAMED,java.base/java.lang.reflect=ALL-UNNAMED,java.base/java.text=ALL-UNNAMED,java.desktop/java.awt.font=ALL-UNNAMED</arg>
                  </compilerArgs>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
